--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -2,7 +2,7 @@
 @import '../../styles/mixins';
 
 .dropdown__wrapper {
-  z-index: 3;
+  z-index: 4;
 }
 
 .dropdown__menu {
